syntax = "proto3";

package pb;

option go_package = "./gen";

service Dispatcher {
  rpc SendMessage(MessageRequest) returns (SendMessageResponse);
}

message MessageRequest {
  string connId = 1;
  bytes payload = 2;
}

message SendMessageResponse {
  bool success = 1;
  string message = 2;
}

